--- a/frontend/src/styles/homepage.css
+++ b/frontend/src/styles/homepage.css
@@ -45,3 +45,9 @@
 .hp-wwpb{
     min-height: 350px;
 }
+
+.itr-img-parent{
+    margin-top: -125px;
+    /* background-color: #184341;
+    opacity: 0.69; */
+}
