--- a/frontend/src/components/File/Hero.module.css
+++ b/frontend/src/components/File/Hero.module.css
@@ -15,6 +15,9 @@
 
 }
 
+.textContent p {
+    color: #ffb400;
+}
 
 
 /* Style for the text content */
@@ -47,7 +50,7 @@
 }
 
 .formContainer button {
-    background-color: green;
+    background-color: #ffb400;
     color: #fff;
     border: none;
     padding: 10px 15px;
@@ -56,4 +59,5 @@
 
 .about {
     text-align: center;
+    color: #184341;
 }
