--- a/frontend/src/components/File/Service.module.css
+++ b/frontend/src/components/File/Service.module.css
@@ -10,6 +10,14 @@
     padding-bottom: 10px;
 }
 
+.top {
+    padding: 5px;
+}
+
+.top h3 {
+    text-align: center;
+}
+
 .cardBody {
     margin-top: 16px;
     width: 150px;
@@ -24,7 +32,7 @@
     margin-right: 5%;
     display: flex;
     flex-wrap: wrap;
-    align-items: center;
+    /* align-items: center; */
 }
 
 .title {
@@ -35,14 +43,14 @@
 }
 
 .content {
-
-    padding-left: 10px;
+    text-align: center;
+    /* padding-left: 10px; */
 }
 
 
 .greenButton {
 
-    background-color: #90EE90;
+    background-color: #ffb400;
     /* color: white; */
     height: 40px;
 
@@ -52,6 +60,16 @@
     display: inline-block;
     font-size: 16px;
     cursor: pointer;
+}
+
+.greenButton:hover {
+    background-color: #184341;
+}
+
+hr {
+    width: 10%;
+    /* color: #ffb400; */
+    border: 2px solid #ffb400;
 }
 
 .but {
@@ -67,9 +85,14 @@
     align-items: center;
     width: 100%;
     height: 60px;
-    border-style: solid;
-    border-color: #90EE90;
-    background-color: #90EE90;
+    /* border-style: solid; */
+    padding-top: 50px;
+    padding-bottom: 20px;
+
+}
+
+.strip h1 {
+    color: #184341;
 }
 
 /* styles.css */
@@ -90,4 +113,5 @@
 .titleCenter {
     padding-top: 30px;
     text-align: center;
+    color: #184341;
 }
