--- a/frontend/src/styles/homepage.css
+++ b/frontend/src/styles/homepage.css
@@ -51,3 +51,40 @@
     /* background-color: #184341;
     opacity: 0.69; */
 }
+
+.cont-form{
+    padding: 40px;
+}
+.cont-form-heading h3{
+    color: #FFB400 !important;
+}
+.cont-form-heading h2{
+    color: #184341 !important;
+}
+
+@media only screen and (max-width: 1024px) {
+    .cont-sec {
+        height: 1560px;
+    }
+  }
+
+.cont-form .hp-form form > input{
+    background-color: #e9e9e9;
+}
+.cont-form .hp-form form > input[type="submit"]{
+    background-color: #FFB400;
+    padding: 15px 40px;
+    color: black;
+}
+.cont-form .hp-form form > textarea{
+    background-color: #e9e9e9;
+}
+.cont-form .hp-form form > textarea{
+    background-color: #e9e9e9;
+}
+
+.cont-heading{
+    font-size: 50px !important;
+    color: #FFB400 !important;
+    font-weight: 600 !important;
+}
