--- a/frontend/src/styles/footer.css
+++ b/frontend/src/styles/footer.css
@@ -56,6 +56,7 @@ footer{
     padding: 7px 15px;
     background-color: orange;
     border: none;
+    border-radius: 0 !important;
     font-weight: 600;
     color: white;
 }
