--- a/frontend/src/styles/homepage.css
+++ b/frontend/src/styles/homepage.css
@@ -88,3 +88,106 @@
     color: #FFB400 !important;
     font-weight: 600 !important;
 }
+
+/* transitions */
+.t1{
+    animation: mymove 5s;
+    animation-delay: 2s;
+    position: relative;
+}
+@keyframes mymove {
+    from {left: 300px;}
+    to {left: 0px;}
+  }
+
+.t2{
+        position: relative;
+transform: translateY(150px);
+  opacity: 0;
+  transition: 1s all ease !important;
+}
+.t2.act{
+   transform: translateY(0);
+  opacity: 1;
+  }
+
+
+  /*  */
+  .animated-heading {
+    opacity: 0;
+    transform: translateY(50px);
+    transition: opacity 0.5s ease, transform 0.5s ease;
+  }
+  
+  .appear {
+    opacity: 1;
+    transform: translateY(0);
+  }
+
+  /*  */
+  .hide-right,
+.hide-left,
+.hide-top,
+.hide-bottom {
+  transition: 1s;
+  opacity: 0;
+}
+
+.show-right {
+  opacity: 1;
+  animation: fadeInRight 1.1s ease-in-out;
+}
+@keyframes fadeInRight {
+  from {
+    transform: translateX(80%);
+  }
+  to {
+    transform: translateX(0);
+  }
+}
+
+.show-bottom {
+  opacity: 1;
+  animation: fadeInBottom 1s ease-in-out;
+}
+@keyframes fadeInBottom {
+  from {
+    transform: translateY(30%);
+    opacity: 0;
+  }
+  to {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+.show-top {
+  opacity: 1;
+  animation: fadeInTop 1s ease-in-out;
+}
+@keyframes fadeInTop {
+  from {
+    transform: translateY(-70%);
+    opacity: 0;
+  }
+  to {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+.show-left {
+  opacity: 1;
+  animation: fadeInLeft 1.5s ease-in-out;
+}
+@keyframes fadeInLeft {
+  from {
+    transform: translateX(-200%);
+  }
+  to {
+    transform: translateX(0);
+  }
+}
+  
+  
+  
