--- a/frontend/src/components/File/Benifit/Benifits.module.css
+++ b/frontend/src/components/File/Benifit/Benifits.module.css
@@ -6,9 +6,6 @@
     /* Adjust padding as needed */
 }
 
-
-
-
 /* Style for the text content */
 .textContent {
     flex: 1;
@@ -65,17 +62,41 @@
 
 .card {
     /* border: 1px solid #ccc; */
-    border-radius: 8px;
-    padding: 16px;
-    margin: 16px;
-    height: 350px;
+    border-radius: 10px;
+    padding: 10px;
+    margin: 10px;
+    height: auto;
     width: 300px;
-    text-align: center;
+    /* text-align: center; */
     padding: 20px;
+    border: 1px solid #e0e0e0;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    overflow: hidden;
+    transition: transform 0.2s;
+}
+
+.card:hover {
+    transform: translateY(-5px);
 }
 
 hr {
     width: 40%;
     /* color: #ffb400; */
     border: 2px solid #ffb400;
+}
+
+/* -------------------------------- */
+
+.data h3 {
+    font-size: 32px;
+    margin: 6;
+    color: #184341;
+    font-weight: 500;
+}
+
+.about p {
+    font-size: 15px;
+    margin-top: 10px;
+    font-weight: 200;
+    color: #666;
 }
