--- a/frontend/src/components/File/Hero/Hero.module.css
+++ b/frontend/src/components/File/Hero/Hero.module.css
@@ -12,6 +12,7 @@
     flex: 1;
     position: relative;
     max-width: 100%;
+    max-height: 100%;
 
 }
 
@@ -26,11 +27,14 @@
     flex: 1;
     max-width: 50%;
     padding: 0 30px;
+    padding-top: 100px;
     /* Adjust padding as needed */
+    padding-bottom: 2px;
 }
 
 .textContent h2 {
-    font-size: 40px;
+    color: white;
+    font-size: 45px;
     margin-bottom: 8px;
 }
 
@@ -42,10 +46,11 @@
     display: flex;
 }
 
-.formContainer input {
+input {
     flex: 1;
     /* Expand to fill available space */
     margin-right: 10px;
+    width: 20px;
     /* Add spacing between input and button */
 }
 
@@ -60,4 +65,39 @@
 .about {
     text-align: center;
     color: #184341;
+}
+
+/* Add a media query for screens smaller than 768px (typical mobile devices) */
+@media (max-width: 768px) {
+    .sectionContainer {
+        flex-direction: column-reverse;
+        /* Stack items vertically on mobile */
+        align-items: center;
+
+        /* padding: 15px; */
+        /* Adjust padding as needed */
+    }
+
+    .imageContainer {
+        max-width: 100%;
+        height: auto;
+    }
+
+    .textContent {
+        /* max-width: 100%; */
+        /* padding-top: 20px; */
+        /* Adjust padding as needed */
+        text-align: center;
+    }
+
+    .textContent h2 {
+        font-size: 3px;
+        /* Adjust font size as needed */
+    }
+
+    .formContainer {
+        flex-direction: column;
+        /* Stack form elements vertically */
+        align-items: center;
+    }
 }
