--- a/frontend/src/components/File/Business/Business.module.css
+++ b/frontend/src/components/File/Business/Business.module.css
@@ -1,4 +1,5 @@
 .card {
+    justify-content: center;
     border: 1px solid black;
     height: auto;
     /* margin-top: 180px; */
@@ -31,6 +32,7 @@
     margin-right: 5%;
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
     align-items: center;
 }
 
