--- a/frontend/src/components/File/Servis/Service.module.css
+++ b/frontend/src/components/File/Servis/Service.module.css
@@ -32,7 +32,8 @@
     margin-right: 5%;
     display: flex;
     flex-wrap: wrap;
-    /* align-items: center; */
+    justify-content: center;
+    align-items: center;
 }
 
 .title {
