homepage minor changes

--- a/frontend/src/styles/homepage.css
+++ b/frontend/src/styles/homepage.css
@@ -223,3 +223,18 @@ transform: translateY(150px);
   color: #FFB400 !important;
   font-weight: 700 !important;
 }
+
+/* section */
+.elementor-element-526d37f{
+  top: -140px;
+}
+.elementor-element-f0dd4c4{
+  height: 105vh;
+}
+.cust-sec-mar{
+  margin-top: 35px;
+}
+
+.cust-partner-mar{
+  margin-bottom: -30px !important;
+}
