--- a/frontend/src/components/File/Hero/Hero.module.css
+++ b/frontend/src/components/File/Hero/Hero.module.css
@@ -49,7 +49,7 @@
 input {
     flex: 1;
     /* Expand to fill available space */
-    margin-right: 10px;
+    /* margin-right: 10px; */
     width: 20px;
     /* Add spacing between input and button */
 }
