--- a/frontend/src/components/File/Servis/Service.module.css
+++ b/frontend/src/components/File/Servis/Service.module.css
@@ -99,6 +99,7 @@ hr {
 /* styles.css */
 .hori {
     display: flex;
+
     justify-content: center;
     text-align: center;
     list-style: none;
@@ -108,7 +109,26 @@ hr {
 
 .hori li {
     font-weight: 200;
-    font-size: 13px;
+    font-size: 1rem;
+}
+
+/* Media query for mobile devices (max-width: 768px) */
+@media (max-width: 768px) {
+    .hori {
+
+        padding-left: 10px;
+        flex-direction: column;
+        /* Change to a vertical layout */
+        text-align: left;
+        /* Reset text alignment for vertical layout */
+        gap: 10px;
+        /* Adjust the gap for mobile layout */
+    }
+
+    .hori li {
+        font-size: 16px;
+        /* Increase font size for better readability on mobile */
+    }
 }
 
 .titleCenter {
