--- a/frontend/src/components/File/Servis/Service.module.css
+++ b/frontend/src/components/File/Servis/Service.module.css
@@ -99,16 +99,22 @@ hr {
 /* styles.css */
 .hori {
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
-    text-align: center;
+    /* text-align: center; */
     list-style: none;
     gap: 20px;
     padding: 10px;
+    margin: 2rem;
 }
 
 .hori li {
     font-weight: 200;
     font-size: 13px;
+    gap: 4px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .titleCenter {
