--- a/frontend/src/components/File/Servis/Service.module.css
+++ b/frontend/src/components/File/Servis/Service.module.css
@@ -68,8 +68,7 @@
 }
 
 hr {
-    width: 10%;
-    /* color: #ffb400; */
+    width: 10rem;
     border: 2px solid #ffb400;
 }
 
@@ -86,6 +85,7 @@ hr {
     align-items: center;
     width: 100%;
     height: 60px;
+    margin: 1rem 0;
     /* border-style: solid; */
     padding-top: 50px;
     padding-bottom: 20px;
@@ -109,8 +109,8 @@ hr {
 }
 
 .hori li {
-    font-weight: 200;
-    font-size: 13px;
+    font-weight: 300;
+    font-size: 1.125rem;
     gap: 4px;
     display: flex;
     align-items: center;
